# ffmpeg_learning

./: READE.md
FFmpegLearn/app/: CMakeLists.txt  build.gradle
FFmpegLearn/app/src/androidTest/java/com/ing/ffmpeg/: ExampleInstrumentedTest.java
FFmpegLearn/app/src/main/: AndroidManifest.xml
FFmpegLearn/app/src/main/cpp/: native-lib.c  simple_ffmpeg_decoder.c
FFmpegLearn/app/src/main/java/com/ing/ffmpeg/: DecodecActivity.java  MainActivity.java
FFmpegLearn/app/src/main/res/layout/: activity_decodec.xml  activity_main.xml
FFmpegLearn/app/src/test/java/com/ing/ffmpeg/: ExampleUnitTest.java
IngPlayer/app/: build.gradle
ffmpeg-3.4.6/: build_android.sh  build_android_multi_so.sh  build_android_single_so.sh  config.asm  config.h  configure
ffmpeg-3.4.6/android_multi_so/arm/lib/pkgconfig/: libavdevice.pc  libswscale.pc
ffmpeg-3.4.6/android_single_so/lib/pkgconfig/: libswresample.pc
ffmpeg-3.4.6/doc/: config.texi
ffmpeg-3.4.6/ffbuild/: config.fate  config.mak  config.sh
ffmpeg-3.4.6/libavcodec/: dca.d  dca_parser.d  dcadata.d  dcaenc.d  dvenc.d  exr.d  fitsenc.d  hevc_mvs.c  hevc_parser.d  hevc_sei.d  hevcdec.d  hevcdsp.d  libavcodec.pc  opus_pvq.c  opusenc.d  opusenc_psy.d  utvideodec.d  utvideoenc.d  vorbisenc.d
ffmpeg-3.4.6/libavfilter/: libavfilter.pc  vf_transpose.d
ffmpeg-3.4.6/libavformat/: dtsdec.d  dtshddec.d  isom.d  libavformat.pc  mpegts.d  rtpdec_qt.d
ffmpeg-3.4.6/libavutil/: libavutil.pc
ffmpeg-3.4.6/libpostproc/: libpostproc.pc
yasm/: Makefile  config.status  gas-token.c  genmacro  genmodule  genperf  genstring  genversion  lc3bid.c  nasm-token.c  re2c  vsyasm  yasm  ytasm
yasm/.deps/: gas-token.Po  lc3bid.Po  module.Po  nasm-token.Po  x86cpu.Po  x86regtmod.Po
yasm/frontends/tasm/.deps/: tasm-options.Po  tasm.Po
yasm/frontends/vsyasm/.deps/: vsyasm.Po
yasm/frontends/yasm/.deps/: yasm-options.Po  yasm.Po
yasm/libyasm/.deps/: assocdat.Po  bc-align.Po  bc-data.Po  bc-incbin.Po  bc-org.Po  bc-reserve.Po  bitvect.Po  bytecode.Po  errwarn.Po  expr.Po  file.Po  floatnum.Po  hamt.Po  insn.Po  intnum.Po  inttree.Po  linemap.Po  md5.Po  mergesort.Po  phash.Po  section.Po  strcasecmp.Po  strsep.Po  symrec.Po  valparam.Po  value.Po  xmalloc.Po  xstrdup.Po
yasm/modules/arch/lc3b/.deps/: lc3barch.Po  lc3bbc.Po
yasm/modules/arch/x86/.deps/: x86arch.Po  x86bc.Po  x86expr.Po  x86id.Po
yasm/modules/dbgfmts/codeview/.deps/: cv-dbgfmt.Po  cv-symline.Po  cv-type.Po
yasm/modules/dbgfmts/dwarf2/.deps/: dwarf2-aranges.Po  dwarf2-dbgfmt.Po  dwarf2-info.Po  dwarf2-line.Po
yasm/modules/dbgfmts/null/.deps/: null-dbgfmt.Po
yasm/modules/dbgfmts/stabs/.deps/: stabs-dbgfmt.Po
yasm/modules/listfmts/nasm/.deps/: nasm-listfmt.Po
yasm/modules/objfmts/coff/.deps/: coff-objfmt.Po  win64-except.Po
yasm/modules/objfmts/dbg/.deps/: dbg-objfmt.Po
yasm/modules/objfmts/elf/.deps/: elf-objfmt.Po  elf-x86-amd64.Po  elf-x86-x32.Po  elf-x86-x86.Po  elf.Po
yasm/po/: Makefile  Makefile.in
(+17 files in other folders)
